nginx2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: app2
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
