nginx2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: app2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo.info
    http:
      paths:
        - path: /two
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
